# E-commerce

./: .flake8  README.md  main.py  pyproject.toml
src/: abstract_classes.py  classes _Product_and _Category.py  classes.py  mixin.py  subclasses.py
tests/: test_classes_Proruct_and_Category.py  test_mixin.py  test_subclasses.py
