[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = ["Alena <alittlekindness94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
requests = "^2.32.3"
classes = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
